<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorHeaderBack"
        android:gravity="center"
        android:text="@string/thong_tin_ca_nhan"
        android:textColor="@color/colorHeaderText"
        android:textSize="16pt"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/ho_ten"
            android:textColor="@color/colorText"
            android:textSize="10pt"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/txtHoTen"
            android:textSize="10pt"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/cmnd"
            android:textColor="@color/colorText"
            android:textSize="9pt" />
        <EditText
            android:id="@+id/txtCMND"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="9pt" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGroupBack"
        android:gravity="center"
        android:text="@string/gioi_tinh"
        android:textColor="@color/colorGroupText"
        android:textSize="14pt"
        android:textStyle="bold" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
    <RadioButton
        android:id="@+id/rdbNam"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/nam" />
    <RadioButton
        android:id="@+id/rdbNu"

        android:layout_width="wrap_content"

        android:layout_height="match_parent"

        android:text="@string/nu" />

        <RadioButton

            android:id="@+id/rdbKhongXacDinh"

            android:layout_width="wrap_content"

            android:layout_height="match_parent"

            android:text="@string/khong_xac_dinh" />

    </RadioGroup>

    <TextView

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:background="@color/colorGroupBack"

        android:gravity="center"

        android:text="@string/so_thich"

        android:textColor="@color/colorGroupText"

        android:textSize="14pt"

        android:textStyle="bold" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"

        android:orientation="horizontal">

        <CheckBox

            android:id="@+id/ckbAnNgon"

            android:layout_width="wrap_content" android:layout_height="match_parent"
            android:text="@string/an_ngon" />
        <CheckBox
            android:id="@+id/ckbMacDep"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mac_dep" />
        <CheckBox
            android:id="@+id/ckbChoiGame"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/choi_game" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGroupBack"
        android:gravity="center"
        android:text="@string/thong_tin_khac"
        android:textColor="@color/colorGroupText"
        android:textSize="14pt"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/txtThongTinKhac"
        android:layout_width="match_parent"
        android:layout_height="80dp"

        android:gravity="top"
        android:text="Nêu là chim tôi sẽ là một con chim non tren canh cay"
        android:textSize="10pt" />

    <Button
        android:id="@+id/btnLuu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:text="@string/luu_thong_tin"
        android:textColor="@color/colorText"
        android:textSize="10pt"
        android:textStyle="bold" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/List"/>

</LinearLayout>

